grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: grafana-web
spec:
 replicas: 1
 selector:
   matchLabels:
     app: grafana-web
 template:
   metadata:
     labels:
       app: grafana-web
   spec:
     containers:
       - name: grafana-web
         image: grafana/grafana-enterprise:13.2.3
         ports:
           - containerPort: 3000
         volumeMounts:
           - name: data-volume
             mountPath: /var/lib/grafana
             readOnly: false
     dnsPolicy: "None"
     dnsConfig:
       nameservers:
         - 9.9.9.9
         - 192.192.188.1
     volumes:
       - name: data-volume
         persistentVolumeClaim:
           claimName: grafana-data-pvc
