grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-web-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grafana.xyz.abc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-web-service
                port:
                  number: 3000
